--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         </ul>
       </li>
       <li>1 tbsp of butter</li>
+    </ul>
   
   <ol>
+  <h1>How to cook it</h1>
       <li>Spread butter on bread and frying pan</li>
       <li>Place bread in frying pan and fry</li>
       <li>Add cheese on top of bread</li>
