--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
   <title>Lists Lab</title>
 </head>
 <body>
+  <ul>
+    <li>Sandwiches
+    <ul>
+  <li>Ham and Cheese</li>
+  <li>Grilled Cheese</li>
+    <ul>
+    <li>2 slices of bread</li>
+    <li>4 slices of cheese</li>
+    <ul> <li>cheddar</li>
+    <li>mozzarella</li>
+    <li>pepper jack</li>
+    </ul>
+    <li>1 tbsp of butter</li>
+    
+  </ul>
+  </ul>
+  </li>
+  <li>Snacks</li>
+  <li>Nacho Cheese French Fries</li>
+  <li>Cheese and crackers</li>
+   <li>Soups
+  <ul>
+  <li>Cheese soup</li>
+  </ul>
+   <li>Sushi</li>
+   <li>Spicy Salmon Rolls</li>
+   <li> California Rolls</li>
+</ul>
 
   <!-- Write your HTML in this file -->
+  
 
 </body>
 </html>
