--- a/index.html
+++ b/index.html
@@ -4,7 +4,40 @@
   <title>Lists Lab</title>
 </head>
 <body>
-
+  <ul>
+    <li>Sandwiches
+    <ul>
+  <li>Ham and Cheese</li>
+  <li>Grilled Cheese</li>
+    <ul>
+  <li>2 slices of bread</li>
+  <li>4 slices of cheese</li>
+  <ul>
+    <li>Cheddar</li>
+    <li>Mozzarella</li>
+    <li>Pepper Jack</li>
+  </ul>
+  <li>1 tbsp of butter</li>
+</ul>
+  </ul>
+  </li>
+  <li>Snacks</li>
+  <ul>
+    <li>Nacho Cheese French Fries</li>
+  <li>Cheese and crackers</li>
+</ul>
+  <li>Soups
+  <ul>
+    <li>Cheese Soup</li>
+    </ul>
+  <li>Sushi</li>
+  <ul>
+    <li>Spicy Salmon Rolls</li>
+    <li>California Rolls</li>
+    </ul>
+    </ul>
+    
+   
   <!-- Write your HTML in this file -->
 
 </body>
