--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Lists Lab</title>
-</head>
-<body>
+<html>
+  <body>
+    
 
-  <!-- Write your HTML in this file -->
+Grilled Cheese Sandwich Ingredients
+<ul>
+  <li>2 slices of bread</li>
+  <li>4 slices of cheese
+<ul>
+    <li>Cheddar</li>
+    <li>Mozzarella</li>
+    <li>Pepper Jack</li>
+ </ul>
 
-</body>
+  <li>1 tbsp of butter</li>
+</ul>
+Preparation
+
+<ol>
+  <li>Spread butter on bread and frying pan
+  <li>Place bread in frying pan and fry
+  <li>Add cheese on top of bread
+  <li>Cover with second slice of bread
+  <li>Turn over and fry for 2 minutes
+</ol>
+
+
+
+
+<h3>Top 5 Favorite Foods</h3>
+<ol>
+  <li>Grilled Cheese
+  <li>Sushi
+  <li>Cheese and crackers
+  <li>Cheese soup
+  <li>Nacho Cheese French Fries
+</ol>
+
+  </body>
 </html>
