--- a/index.html
+++ b/index.html
@@ -5,40 +5,30 @@
 </head>
 <body>
   <ul>
-    <li>Sandwiches
+  <li>Sandwiches
     <ul>
-  <li>Ham and Cheese</li>
-  <li>Grilled Cheese</li>
-    <ul>
-  <li>2 slices of bread</li>
-  <li>4 slices of cheese</li>
-  <ul>
-    <li>Cheddar</li>
-    <li>Mozzarella</li>
-    <li>Pepper Jack</li>
-  </ul>
-  <li>1 tbsp of butter</li>
-</ul>
-  </ul>
+      <li>Ham and Cheese</li>
+      <li>Grilled Cheese</li>
+      <ul>
+        <li>2 slices of bread</li>
+        <li>4 slices of cheese</li>
+        <li>1 tbsp of butter</li>
+    </ul>
   </li>
-  <li>Snacks</li>
-  <ul>
+  <li>Snacks
     <li>Nacho Cheese French Fries</li>
-  <li>Cheese and crackers</li>
-</ul>
+    <li>Cheese and crackers</li>
   <li>Soups
-  <ul>
-    <li>Cheese Soup</li>
+    <ul>
+      <li>Cheese soup</li>
     </ul>
-  <li>Sushi</li>
-  <ul>
-    <li>Spicy Salmon Rolls</li>
-    <li>California Rolls</li>
+  </li>
+  <li>Sushi
+    <ul>
+      <li>Spicy Salmon Rolls</li>
+      <li>California Rolls</li>
     </ul>
-    </ul>
-    
-   
-  <!-- Write your HTML in this file -->
-
+  </li>
+</ul>
 </body>
 </html>
