--- a/index.html
+++ b/index.html
@@ -5,49 +5,24 @@
 </head>
 <body>
   <ul>
-    <li>Sandwiches
-    <ul>
-  <li>Ham and Cheese</li>
-  <li>Grilled Cheese</li>
-    <ul>
     <li>2 slices of bread</li>
-    <li>4 slices of cheese</li>
-    <ul> <li>cheddar</li>
-    <li>mozzarella</li>
-    <li>pepper jack</li>
+    <li>4 slices of cheese
+    <ul>
+      <li>cheddar</li>
+      <li>mozzarella</li>
+      <li>pepper jack</li>
     </ul>
+    </li>
     <li>1 tbsp of butter</li>
-  <ol> 
-  <li>Spread butter on bread and frying pan.</li>
-  <li>Place bread in frying pan and fry</li>
-  <li>Add cheese on top of bread</li>
-  <li>Cover with second slice of bread</li>
-  <li>Turn over and fry for 2 minutes.</li>
-  </ol>
+  </ul>
+  <ol>
+     <li>Spread butter on bread and frying pan</li>
+     <li>Place bread in frying pan and fry</li>
+     <li>Add cheese on top of bread</li>
+     <li>Cover with second slice of bread</li>
+     <li>Turn over and fry for 2 minutes</li>
     
-  </ul>
-  </ul>
-  </li>
-  <li>Snacks</li>
-  <li>Nacho Cheese French Fries</li>
-  <li>Cheese and crackers</li>
-   <li>Soups
-  <ul>
-  <li>Cheese soup</li>
-  </ul>
-   <li>Sushi</li>
-   <li>Spicy Salmon Rolls</li>
-   <li> California Rolls</li>
-</ul>
-
-<h3>Top 5 Favorite Foods</h3>
-<ol>
-  <li>Grilled Cheese</li>
-  <li>Sushi</li>
-  <li>Cheese and crackers</li>
-  <li>Cheese soup</li>
-  <li>Nacho Cheese French Fries</li>
-</ol>
+  </ol>
   <!-- Write your HTML in this file -->
   
 
